fix: handle null task tags and add task id to response